# ReprAVX

./: CMakeLists.txt
include/: repra.h
src/: alloc.h  backend_alsa.c  backend_alsa.h  dsp_avx2.c  mp3_internals.c  mp3_internals.h  repra_threads.c  repra_threads.h  wav_internals.h
src/allocs/: alloc.c
src/dsp/: dsp_avx2.h
src/engine/: engine.c  engine_internals.h
src/loaders/: loader.c  loader.h
src/mp3/: huffman_tables.h  mp3_internals.c  mp3_internals.h
tests/: test_main.c
